Add checkout_rental basic function, url, an d template

--- a/templates/cart/rentals_cart.html
+++ b/templates/cart/rentals_cart.html
@@ -89,7 +89,7 @@
                 </div>
                 <hr>
                 <!-- keep shopping and Secure Checkout -->
-                <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
+                <a href="{% url 'checkout_rental' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
                     <span class="text-uppercase">Secure Checkout</span>
                     <span class="icon">
                         <i class="fas fa-lock"></i>
