--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -41,7 +41,7 @@
                         <!-- date -->
                         <div class="form-group mt-3">
                             <label for="date">Select Date and Travellers</label>
-                            <input type="date" class="form-control" id="date" name="excursion_date" required>
+                            <input type="date" class="form-control" id="date" name="excursion_date" min="{{today}}" required>
                         </div>
                         <!-- number of adults -->
                         <div class="form-group mt-3">
