Add rental bookings for customers

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,8 +84,12 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
                                             class="fa-solid fa-user"></i> Logout</a></li>
-                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"> Change Password</a></li>
-                                <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}"> Excursion Bookings</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"> Change
+                                        Password</a></li>
+                                <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}"> Excursion
+                                        Bookings</a></li>
+                                <li><a class="dropdown-item" href="{% url 'rental-bookings' %}"> Rental Bookings</a>
+                                </li>
                             </ul>
                         </li>
 
