--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -106,6 +106,8 @@
                                         Password</a></li>
                                 <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}"> Excursion
                                         Bookings</a></li>
+                                <li><a class="dropdown-item" href="{% url 'rental-bookings' %}"> Rental Bookings</a>
+                                </li>
 
                             </ul>
                         </li>
