--- a/templates/home/customer_rental_booking.html
+++ b/templates/home/customer_rental_booking.html
@@ -1,40 +1,36 @@
-{% extends 'excursions/excursions_base.html' %}
+{% extends 'rentals/rentals_base.html' %}
 {% load static %}
 
 {% block content %}
 <section>
-    {% if today_excursion_bookings or future_excursion_bookings or previous_excursion_bookings %}
+    {% if today_rental_bookings or future_rental_bookings or previous_rental_bookings %}
 
-    <h1 class="text-center mt-5">Your Excursion Bookings</h1>
+    <h1 class="text-center mt-5">Your Rentals Bookings</h1>
 
     <!-- today bookings -->
-    {% if today_excursion_bookings %}
+    {% if today_rental_bookings %}
     <h4 class="text-center mt-5">Today Bookings</h4>
     <div class="table_wrapper table-responsive">
         <table class="data_table">
             <tr>
                 <th>Image</th>
-                <th>Title</th>
-                <th>Excursion Date</th>
+                <th>Check-In</th>
+                <th>Checkout</th>
                 <th>Adult Quantity</th>
-                {% if order.child_qty%}
                 <th>Child Quantity</th>
-                {% endif %}
-                <th>Pick up at</th>
+                <th>Price</th>
                 <th>Bk.Number</th>
                 <th>Total</th>
             </tr>
 
-            {% for order in today_excursion_bookings %}
+            {% for order in today_rental_bookings %}
             <tr>
-                <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
-                <td>{{order.excursion_name |slice:":25"|title}}</td>
-                <td>{{order.excursion_date}}</td>
+                <td><img src="{{order.image}}" alt="{{order.rental_name}}" style="width:75px"></td>
+                <td>{{order.check_in}}</td>
+                <td>{{order.checkout}}</td>
                 <td>{{order.adult_qty}}</td>
-                {% if order.child_qty%}
                 <td>{{order.child_qty}}</td>
-                {% endif %}
-                <td>{{order.place_pickup}}</td>
+                <td>{{order.price}}</td>
                 <td>{{order.order_number}}</td>
                 <td>£{{order.subtotal}}</td>
             </tr>
@@ -44,34 +40,30 @@
     {% endif %}
 
     <!-- Future bookings -->
-    {% if future_excursion_bookings %}
+    {% if future_rental_bookings %}
     <h4 class="text-center mt-5">Future Bookings</h4>
 
     <div class="table_wrapper table-responsive">
         <table class="data_table">
             <tr>
                 <th>Image</th>
-                <th>Title</th>
-                <th>Excursion Date</th>
+                <th>Check-In</th>
+                <th>Checkout</th>
                 <th>Adult Quantity</th>
-                {% if order.child_qty%}
                 <th>Child Quantity</th>
-                {% endif %}
-                <th>Pick up at</th>
+                <th>Price</th>
                 <th>Bk.Number</th>
                 <th>Total</th>
             </tr>
 
-            {% for order in future_excursion_bookings %}
+            {% for order in future_rental_bookings %}
             <tr>
-                <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
-                <td>{{order.excursion_name |slice:":25"|title}}</td>
-                <td>{{order.excursion_date}}</td>
+                <td><img src="{{order.image}}" alt="{{order.rental_name}}" style="width:75px"></td>
+                <td>{{order.check_in}}</td>
+                <td>{{order.checkout}}</td>
                 <td>{{order.adult_qty}}</td>
-                {% if order.child_qty%}
                 <td>{{order.child_qty}}</td>
-                {% endif %}
-                <td>{{order.place_pickup}}</td>
+                <td>{{order.price}}</td>
                 <td>{{order.order_number}}</td>
                 <td>£{{order.subtotal}}</td>
             </tr>
@@ -81,34 +73,30 @@
     {% endif %}
 
     <!-- pass bookings -->
-    {% if previous_excursion_bookings %}
+    {% if previous_rental_bookings %}
     <h4 class="text-center mt-5">Previous Bookings</h4>
 
     <div class="table_wrapper table-responsive">
         <table class="data_table">
             <tr>
                 <th>Image</th>
-                <th>Title</th>
-                <th>Excursion Date</th>
+                <th>Check-In</th>
+                <th>Checkout</th>
                 <th>Adult Quantity</th>
-                {% if order.child_qty%}
                 <th>Child Quantity</th>
-                {% endif %}
-                <th>Pick up at</th>
+                <th>Price</th>
                 <th>Bk.Number</th>
                 <th>Total</th>
             </tr>
 
-            {% for order in previous_excursion_bookings %}
+            {% for order in previous_rental_bookings %}
             <tr>
-                <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
-                <td>{{order.excursion_name |slice:":25"|title}}</td>
-                <td>{{order.excursion_date}}</td>
+                <td><img src="{{order.image}}" alt="{{order.rental_name}}" style="width:75px"></td>
+                <td>{{order.check_in}}</td>
+                <td>{{order.checkout}}</td>
                 <td>{{order.adult_qty}}</td>
-                {% if order.child_qty%}
                 <td>{{order.child_qty}}</td>
-                {% endif %}
-                <td>{{order.place_pickup}}</td>
+                <td>{{order.price}}</td>
                 <td>{{order.order_number}}</td>
                 <td>£{{order.subtotal}}</td>
             </tr>
@@ -119,7 +107,7 @@
 
     {% else %}
     <h1 class="text-center mt-5">You do not have any bookings yet</h1>
-    <div class="text-center"><a class="user_button_sm my_hover btn center" href="{% url 'excursions' %}"><i
+    <div class="text-center"><a class="user_button_sm my_hover btn center" href="{% url 'rentals' %}"><i
                 class="fa-solid fa-cart-shopping"></i> Go shopping</a>
     </div>
     {% endif %}
