--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -8,7 +8,7 @@
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4 text-center"> <i class="fa-solid fa-cart-shopping site-default-color"></i>
-                    Shopping Cart</h2>
+                    Shopping Cart </h2>
                 <hr>
             </div>
         </div>
@@ -41,9 +41,9 @@
                             <!-- form for updating quantity-->
                             <form method="POST" action="{% url 'cart_update' item.item_id %}">
                                 {% csrf_token %}
-                                  <!-- excursion date-->
-                              <td><input type="date" class="form-control" name="excursion_date"
-                                value="{{item.values.excursion_date}}" min="{{today}}"></td>
+                                <!-- excursion date-->
+                                <td><input type="date" class="form-control" name="excursion_date"
+                                        value="{{item.values.excursion_date}}" min="{{today}}"></td>
 
                                 <!-- Adult quantity-->
                                 <td>
@@ -83,13 +83,27 @@
                 <div><strong>Total:</strong> <span class="float-right">£{{total | floatformat:2}}</span></div>
                 <hr>
                 <!-- keep shopping and Secure Checkout -->
-                <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
+
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3"
+                >
                     <span class="text-uppercase">Secure Checkout</span>
                     <span class="icon">
                         <i class="fas fa-lock"></i>
                     </span>
                 </a>
+                {% else %}
+                <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3"
+                data-bs-toggle="modal" data-bs-target="#excursion_cart_Modal"
+                >
+                    <span class="text-uppercase">Secure Checkout</span>
+                    <span class="icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                </a>
+                {% endif %}
 
+                  <!-- Keep shoping -->
                 <a href="{% url 'excursions' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
@@ -118,6 +132,31 @@
         </a>
         {% endif %}
 
+
+        <!-- Excursion cart login modal -->
+        <div class="modal fade" id="excursion_cart_Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Please Login to continue</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <a href="{% url 'account_login' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3"
+                        target="_blank"
+                        >
+                            <span class="text-uppercase">Login</span>
+                            <span class="icon">
+                                <i class="fa-solid fa-user"></i>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 {% include 'excursions/includes/delete_cart_item_script.html' %}
