--- a/templates/base.html
+++ b/templates/base.html
@@ -167,7 +167,7 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
     <!-- Local Javascript -->
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/slideShow.js' %}"></script>
 
 </body>
 
