--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<section class="home-banner card">
+<section class="home-banner">
     <!-- slide show images -->
     <div class="slide">
         <img src="{% static '/images/hero-images/boat-escursion.jpg' %}" alt="boat-escursion image">
