--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -84,12 +84,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
                                             class="fa-solid fa-user"></i> Sign in</a></li>
-                                <li><a class="dropdown-item" href="{% url 'account_signup' %}"><i
-                                            class="fa-solid fa-user-plus"></i> Register Account</a></li>
                             </ul>
                         </li>
                         {% else %}
-                        <!-- user settings -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -98,12 +95,19 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
                                             class="fa-solid fa-user"></i> Logout</a></li>
-                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"> Change
-                                        Password</a></li>
-                                <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}"> Excursion
-                                        Bookings</a></li>
-                                <li><a class="dropdown-item" href="{% url 'rental-bookings' %}"> Rental Bookings</a>
-                                </li>
+                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"><i
+                                            class="fa-solid fa-user"></i> Change Password</a></li>
+                                {% if request.user.is_superuser %}
+                                <li><a class="dropdown-item" href="{% url 'administrator' %}"><i
+                                            class="fa-solid fa-toolbox"></i> Admin board</a></li>
+                                {% else %}
+                                <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
+                                        <i class="fa-solid fa-book-circle-arrow-up"></i>
+                                        </i>Excursion Bookings</a></li>
+                                <li><a class="dropdown-item" href="{% url 'rental-bookings' %}">
+                                        <i class="fa-solid fa-book-circle-arrow-up"></i>
+                                        </i>Rental Bookings</a></li>
+                                {% endif %}
                             </ul>
                         </li>
 
