--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -45,7 +45,7 @@
     </nav> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo.png' %}"
+            <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo-white.png' %}"
                     alt="Yara name with a palm tree"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
