Take off wrong word for admin_rental

--- a/templates/administrator/rentals/admin_rentals.html
+++ b/templates/administrator/rentals/admin_rentals.html
@@ -30,7 +30,7 @@
                 <th>Type</th>
                 <th>Image</th>
                 <th>Date created</th>
-                <th>Title (Links to excursion details)</th>
+                <th>Title (Links to rental details)</th>
                 <th>Price</th>
                 <th></th>
                 <th></th>
