Add register link to app navbars

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
                                             class="fa-solid fa-user"></i> Sign in</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_signup' %}"><i
+                                            class="fa-solid fa-user-plus"></i> Register </a></li>
+
                             </ul>
                         </li>
                         {% else %}
@@ -87,7 +90,7 @@
                                             class="fa-solid fa-user"></i> Change Password</a></li>
                                 {% if request.user.is_superuser %}
                                 <li><a class="dropdown-item" href="{% url 'administrator' %}"><i
-                                    class="fa-solid fa-toolbox"></i> Admin board</a></li>
+                                            class="fa-solid fa-toolbox"></i> Admin board</a></li>
                                 {% else %}
                                 <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
                                         <i class="fa-solid fa-book-circle-arrow-up"></i>
@@ -101,7 +104,8 @@
 
                         {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i></i> Contact</a>
+                            <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i></i>
+                                Contact</a>
                         </li>
                     </div>
                 </ul>
