--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -84,6 +84,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
                                             class="fa-solid fa-user"></i> Sign in</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_signup' %}"><i
+                                            class="fa-solid fa-user-plus"></i> Register </a></li>
                             </ul>
                         </li>
                         {% else %}
